--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "isomorphic-unfetch": "^3.0.0",
-    "next": "^9.3.1",
+    "next": "9.3.3",
     "next-images": "^1.3.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
@@ -14,7 +14,8 @@
   "devDependencies": {
     "@types/node": "^13.9.2",
     "@types/react": "^16.9.23",
-    "babel-plugin-styled-components": "^1.10.7"
+    "babel-plugin-styled-components": "^1.10.7",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "dev": "next",
