--- a/package.json
+++ b/package.json
@@ -11,17 +11,22 @@
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^9.3.4",
     "@types/node": "^13.9.2",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/styled-components": "^5.0.1",
     "babel-plugin-styled-components": "^1.10.7",
+    "cross-env": "^7.0.2",
     "typescript": "^3.8.3"
   },
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "analyze": "cross-env ANALYZE=true next build",
+    "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
+    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
   },
   "author": "",
   "license": "ISC"
