--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "next": "9.3.3",
     "next-images": "^1.4.0",
+    "node-fetch": "^2.6.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-table": "^7.0.4",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
