--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "date-fns": "^2.11.1",
+    "dotenv": "^8.2.0",
     "next": "9.3.3",
     "next-images": "^1.4.0",
     "node-fetch": "^2.6.0",
